--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/ContentViews/PostView.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/ContentViews/PostView.xaml
@@ -1,30 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
-             xmlns:views="http://xamarin.com/schemas/2020/toolkit" 
-             xmlns:vm="clr-namespace:KenffySoft.Bloggy.ViewModels"
-             x:Class="KenffySoft.Bloggy.Views.Users.PostsPage"
-             Title="Posts">
+             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:views="http://xamarin.com/schemas/2020/toolkit"
+             x:Class="KenffySoft.Bloggy.Views.ContentViews.PostView">
 
-
-    <!--<ContentPage.BindingContext>
-        <vm:PostViewModel />
-    </ContentPage.BindingContext>-->
-
-    <!--<ContentPage.ToolbarItems>
-        <ToolbarItem IconImageSource="add.png" Order="Primary" Command="{Binding AddCommand}"/>
-    </ContentPage.ToolbarItems>-->
-
-    <ContentPage.Resources>
+    <ContentView.Resources>
         <ResourceDictionary>
             <views:ItemSelectedEventArgsConverter x:Key="ItemSelectedEventArgsConverter" />
         </ResourceDictionary>
-    </ContentPage.Resources>
-
-    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-
-        <Grid>
+    </ContentView.Resources>
+    
+    <ContentView.Content>
+      <StackLayout>
             <ListView x:Name="MyPost"
                 ItemsSource="{Binding PostList}"
                         HasUnevenRows="True" 
@@ -77,7 +65,6 @@
                                                             <ColumnDefinition Width="Auto"/>
                                                             <ColumnDefinition Width="Auto"/>
                                                             <ColumnDefinition Width="Auto"/>
-                                                            <ColumnDefinition Width="Auto"/>
                                                         </Grid.ColumnDefinitions>
                                                         <Image Source="{Binding LikeImage}" VerticalOptions="CenterAndExpand"
                                                                        HeightRequest="20" Aspect="AspectFit" Grid.Column="0"/>
@@ -89,8 +76,6 @@
                                                         <Label Text="{Binding NumComments}" Grid.Column="3" 
                                                            VerticalOptions="CenterAndExpand"
                                                            TextColor="{StaticResource TextPrimary}"/>
-                                                        <Image Source="{Binding VisibilityStatus}" VerticalOptions="CenterAndExpand" Margin="15,0,0,0"
-                                                                    HeightRequest="20" Aspect="AspectFit" Grid.Column="4"/>
                                                     </Grid>
                                                 </StackLayout>
                                             </StackLayout>
@@ -134,7 +119,6 @@
                 </ListView.Footer>
 
             </ListView>
-
-        </Grid>
-    </StackLayout>
-</ContentPage>
+        </StackLayout>
+  </ContentView.Content>
+</ContentView>
