--- a/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Profile/ProfileOverviewPage.xaml
+++ b/KenffySoft.Bloggy/KenffySoft.Bloggy/Views/Profile/ProfileOverviewPage.xaml
@@ -1,10 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-             x:Class="KenffySoft.Bloggy.Views.ProfilePage"
+             xmlns:helpers="clr-namespace:KenffySoft.Bloggy.Helpers"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit" 
+             xmlns:vm="clr-namespace:KenffySoft.Bloggy.ViewModels"
+             x:Class="KenffySoft.Bloggy.Views.Profile.ProfileOverviewPage"
              BackgroundColor="{StaticResource Background}"
-             Title="{Binding CurrentUser.Name}">
+             Title="Settings"
+             Shell.NavBarHasShadow="True">
+
+    <ContentPage.BindingContext>
+        <vm:SettingsViewModel />
+    </ContentPage.BindingContext>
 
     <ScrollView>
         <StackLayout Padding="8">
@@ -20,8 +27,6 @@
                             VerticalOptions="CenterAndExpand"
                             Text="{Binding CurrentUser.Avatar}"  
                             Source="{Binding CurrentUser.ProfileImage}"  
-                            Color="Green" 
-                            TextColor="White" 
                             Size="{OnPlatform iOS='60', Android='90'}"
                             x:Name="PostAvatar"
                             xct:TouchEffect.Command="{Binding DisplayImageCommand}"/>
@@ -31,18 +36,24 @@
                             Text="{Binding CurrentUser.Name}"
                             TextColor="{StaticResource TextPrimary}" />
 
-                        <Button
+                        <Label
+                            Margin="10,10"
+                            FontSize="Medium"
+                            HorizontalOptions="Center"
+                            Text="{Binding CurrentUser.Email}"
+                            TextColor="{StaticResource TextPrimary}" />
+
+                        <!--<Button
                             Margin="0,4,0,16"
                             Padding="40,0"
                             xct:TouchEffect.NormalBackgroundColor="Transparent"
                             xct:TouchEffect.PressedBackgroundColor="#ecf0f1"
-                            xct:TouchEffect.Command="{Binding FollowCommand}"
                             BorderColor="{StaticResource TabIconSelected}"
                             BorderWidth="2"
                             CornerRadius="20"
                             HeightRequest="40"
                             HorizontalOptions="Center"
-                            Text="{Binding FollowStatus}" />
+                            Text="Follow" />-->
 
 
                         <BoxView
@@ -91,7 +102,7 @@
                                 Text="Following" 
                                 xct:TouchEffect.Command="{Binding OnFollowingCommand}"/>
 
-                            <!--<Label
+                            <Label
                                 Grid.RowSpan="1"
                                 Grid.Column="3"
                                 Margin="0,0,4,0"
@@ -101,7 +112,7 @@
                                 Text="{x:Static helpers:BloggyIcon.Edit}"
                                 TextColor="{StaticResource TextSecondary}"
                                 VerticalOptions="Center" 
-                                xct:TouchEffect.Command="{Binding EditProfileCommand}"/>-->
+                                xct:TouchEffect.Command="{Binding EditProfileCommand}"/>
 
                         </Grid>
                     </StackLayout>
@@ -232,7 +243,59 @@
                 </Grid>
             </Frame>
 
+            <Frame
+                Padding="0"
+                CornerRadius="6"
+                HasShadow="False">
+                <Grid RowDefinitions="Auto,Auto">
+
+                    <Grid BackgroundColor="{StaticResource CardHeaderBackground}">
+                        <StackLayout
+                            Padding="16,10"
+                            HorizontalOptions="StartAndExpand"
+                            Orientation="Horizontal"
+                            Spacing="2">
+
+                            <Label
+                                FontSize="Small"
+                                Text="OPTIONS"
+                                TextColor="{StaticResource TabIconSelected}" />
+                        </StackLayout>
+                    </Grid>
+
+                    <Grid Padding="8"
+                          Grid.Row="1">
+
+                        <Grid RowDefinitions="Auto,Auto,Auto">
+                            <StackLayout 
+                                Grid.Row="0"
+                                Padding="5"
+                                xct:TouchEffect.NormalBackgroundColor="Transparent"
+                                xct:TouchEffect.PressedBackgroundColor="#ecf0f1"
+                                xct:TouchEffect.Command="{Binding ResetPasswordCommand}">
+                                <Label Text="Reset Password" FontSize="Medium"/>
+                            </StackLayout>
+                            
+                            <BoxView
+                                Grid.Row="1"
+                                BackgroundColor="{StaticResource Background}"
+                                HeightRequest="1"
+                                HorizontalOptions="FillAndExpand"
+                                VerticalOptions="Center" />
+                            
+                            <StackLayout 
+                                Grid.Row="2"
+                                Padding="5"
+                                xct:TouchEffect.NormalBackgroundColor="Transparent"
+                                xct:TouchEffect.PressedBackgroundColor="#ecf0f1"
+                                xct:TouchEffect.Command="{Binding LogOutCommand}">
+                                <Label Text="Log Out" FontSize="Medium"/>
+                            </StackLayout>
+                        </Grid>
+                        
+                    </Grid>
+                </Grid>
+            </Frame>
         </StackLayout>
     </ScrollView>
-
 </ContentPage>
